--- a/index.html
+++ b/index.html
@@ -940,7 +940,8 @@
                 
             </div>
         </div>
-                        <summary><span>Compétences</span><label class="completion-label"><input type="checkbox" id="completion-skills" class="completion-checkbox"><span>Fait ✅</span></label></summary>
+
+        <!-- PREVIEW PANEL -->
                         <div class="control-group-content space-y-3">
                             <p class="text-sm font-medium">Style de Présentation</p>
                             <div class="flex gap-2">
